--- a/index.css
+++ b/index.css
@@ -4,7 +4,19 @@ body {
 }
  .container {
  	text-align: center;
-
+ 	color: white;
+ 	font-size: 20px;
+ 	font-weight: bolder;
+ 	text-decoration: none;
+ 	padding: 60px;
+ }
+ header nav a{
+ 	text-decoration: none;
+ 	padding-bottom: 100px;
+ 	color: white;
+ }
+ #profile {
+ 	color: rgb(7,30,28);
  }
  	
 
