--- a/index.css
+++ b/index.css
@@ -4,19 +4,29 @@ body {
 }
  .container {
  	text-align: center;
- 	color: white;
+ 	color: rgb(5,94,91);
  	font-size: 20px;
  	font-weight: bolder;
  	text-decoration: none;
- 	padding: 60px;
+ 	
  }
  header nav a{
  	text-decoration: none;
- 	padding-bottom: 100px;
  	color: white;
+
  }
  #profile {
- 	color: rgb(7,30,28);
+ 	color: rgb(5,94,91);
+ }
+ span{
+ 	color: rgb(5,70,94);
+ }
+ header li {
+ 	display: inline;
+ 	padding-left: 50px;
+ 	font-weight: normal;
+ 	font-size: 12px;
+ 	text-align: center;
  }
  	
 
