--- a/index.css
+++ b/index.css
@@ -1,32 +1,75 @@
-body {
-	background-color:rgb(7,15,23);
+
+header{
+	background-color: rgb(255,255,255);
+	color: black;
+	 border-bottom: black 3px solid;
+	 border-top: blue 3px solid;
+
+	
+}
+
+h1{
+	color:black;
+	font-size: 18px;
+	font-weight: bolder;
+	padding: 30;
+	padding-bottom: 0;
+
 
 }
  .container {
  	text-align: center;
- 	color: rgb(5,94,91);
+ 	color: black;
  	font-size: 20px;
  	font-weight: bolder;
  	text-decoration: none;
  	
+ 	
  }
- header nav a{
+ nav a{
+ 	text-decoration-style: underline;
  	text-decoration: none;
  	color: white;
+ 	text-align: center;
+ 	font-size: 15px;
+ 	font-weight: normal;
+ 	display: inline;
+ 	padding: 40px;
 
  }
  #profile {
- 	color: rgb(5,94,91);
+ 	color: black;
+ 	font-family: 'Lobster', cursive;
+
+    font-family: 'Pacifico', cursive;
+
  }
  span{
  	color: rgb(5,70,94);
  }
- header li {
- 	display: inline;
- 	padding-left: 50px;
- 	font-weight: normal;
- 	font-size: 12px;
+
+ li{
  	text-align: center;
+ 	text-decoration: none;
+ 	padding: 20px;
+ 	padding-right: 20px;
+ 	background: black;
+ 	
+
+ }
+ .description{
+    font-weight: bolder;
+ 	font-size: 40px;
+ 	background:url(comp.jpg);
+ 	background-repeat: no-repeat;
+ 	background-size: cover;
+ 	background-attachment: fixed;
+ 	color: black;
+ 	text-align: center;
+ 	width: 250;
+ 	height: 100;
+ 	padding: 120px;
+
  }
  	
 
