Add clickable icons

--- a/index.css
+++ b/index.css
@@ -64,6 +64,7 @@ h1{
  	padding: 20px;
  	padding-right: 20px;
  	background: black;
+    border-bottom:  white 30px solid;
 
 
     font-family: 'Pacifico', cursive;
