--- a/index.css
+++ b/index.css
@@ -1,9 +1,9 @@
 
 header{
-	background-color: rgb(255,255,255);
+	 background-color: rgb(255,255,255);
 	color: black;
 	 border-bottom: black 3px solid;
-	 border-top: blue 3px solid;
+	 
 
 	
 }
@@ -96,9 +96,10 @@ h1{
     font-family: 'Righteous', cursive;
 
     font-family: 'Lobster', cursive;
-
-
-
+ }
+ footer {
+ 	text-align: center;
+ 	padding: 20px;
  }
  	
 
