--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@ header{
 	 background-color: rgb(255,255,255);
 	color: black;
 	 border-bottom: black 3px solid;
+	 border-top: black 20px solid;
 	 
 
 	
