--- a/About.css
+++ b/About.css
@@ -2,10 +2,7 @@
 header{
 	background-color: rgb(255,255,255);
 	color: black;
-	 border-bottom: black 3px solid;
-	
-
-
+    border-bottom: black 3px solid;
 	
 }
 
@@ -83,8 +80,8 @@ h1{
 
  }
  .description{
-    font-weight: bolder;
- 	font-size: 17px;
+    font-weight: bold;
+ 	font-size: 16px;
  	background:white;
  	background-repeat: no-repeat;
  	background-size: cover;
@@ -105,6 +102,11 @@ h1{
     font-family: 'Lobster', cursive;
 
     font-family: 'Taviraj', serif;
+ }
+ em {
+ 	color: rgb(140,138,19);
+ 	font-size: 15px;
+ 	font-weight: bolder;
  }
 
 
