--- a/About.css
+++ b/About.css
@@ -9,13 +9,35 @@ header{
 a:hover{
 	color: green;
 }
+img{
+    text-align: center;
+    top: 15px;
+    padding-bottom: 15px;
+    border-radius: 20px 30px 20px 15px;
+}
 
 h1{
-	color:black;
-	font-size: 18px;
-	font-weight: bolder;
-	padding: 30;
-	padding-bottom: 0;
+	color:rgb(19,149,141);
+    text-decoration-line: underline;
+    font-size: 40px;
+    font-weight: bolder;
+    text-align: left;
+    padding-left: 20px;
+    padding-top: 0px;
+    
+    
+    
+
+   
+
+   
+    font-family: 'Satisfy', cursive;
+
+    font-family: 'Kaushan Script', cursive;
+
+    font-family: 'Pacifico', cursive;
+
+    font-family: 'Great Vibes', cursive
 
 
 }
@@ -80,8 +102,8 @@ h1{
 
  }
  .description{
-    font-weight: bold;
- 	font-size: 16px;
+    font-weight: normal;
+ 	font-size: 14px;
  	background:white;
  	background-repeat: no-repeat;
  	background-size: cover;
@@ -108,6 +130,11 @@ h1{
  	font-size: 15px;
  	font-weight: bolder;
  }
+ footer {
+    text-align: center;
+    padding: 20px;
+    font-weight: bold;
+}
 
 
  	
