--- a/Project.css
+++ b/Project.css
@@ -12,12 +12,27 @@ a:hover{
 }
 
 h1{
-	color:black;
-	font-size: 18px;
-	font-weight: bolder;
-	padding: 30px;
-    text-align: center;
+	color:rgb(19,149,141);
+    text-decoration-line: underline;
+    font-size: 40px;
+    font-weight: bolder;
+    text-align: left;
+    padding-left: 20px;
+    padding-top: 0px;
+    
+    
+    
 
+   
+
+   
+    font-family: 'Satisfy', cursive;
+
+    font-family: 'Kaushan Script', cursive;
+
+    font-family: 'Pacifico', cursive;
+
+    font-family: 'Great Vibes', cursive
 
 }
  .container {
@@ -40,18 +55,40 @@ h1{
  	padding: 40px;
  }
 
- .Links a {
-    font-size: 23px;
+  .Links a {
+    font-size: 18px;
     text-decoration: none;
     text-align: center;
-    color: rgb(19,149,142);
+    color: rgb(3,77,73);
     font-weight: bolder;
-    padding-left: 100px;
+    padding-left: 200px;
     font-family: 'Lobster', cursive;
 
     font-family: 'Pacifico', cursive;
 
     font-family: 'Righteous', cursive;
+
+ }
+ .Links p{
+    text-align: center;
+    font-weight: normal;
+    font-size: 20px;
+    color:black;
+
+
+    
+
+    font-family: 'Satisfy', cursive;
+
+    font-family: 'Kaushan Script', cursive;
+
+    font-family: 'Pacifico', cursive;
+
+    font-family: 'Great Vibes', cursive;
+
+    font-family: 'Playfair Display SC', serif;
+
+    font-family: 'Gupter', serif;
 
  }
  .Links a:hover{
@@ -117,6 +154,11 @@ h1{
     font-family: 'Lobster', cursive;
 
     font-family: 'Taviraj', serif;
+ }
+  footer {
+    text-align: center;
+    padding: 20px;
+    font-weight: bold;
  }
 
 
