--- a/index.css
+++ b/index.css
@@ -14,19 +14,39 @@ a:hover{
 }
 
 h1{
-	color:black;
-	font-size: 18px;
+	color:rgb(19,149,141);
+	text-decoration-line: underline;
+	font-size: 40px;
 	font-weight: bolder;
-	padding: 30;
-	padding-bottom: 0;
+	text-align: left;
+	padding-left: 20px;
+	padding-top: 0px;
+	
+	
+	
 
+   
+
+   
+    font-family: 'Satisfy', cursive;
+
+    font-family: 'Kaushan Script', cursive;
+
+    font-family: 'Pacifico', cursive;
+
+    font-family: 'Great Vibes', cursive
 
 }
+
+ 
+
+
+	  
  .container {
  	text-align: center;
  	color: black;
  	font-size: 20px;
- 	font-weight: bolder;
+ 	font-weight: normal;
  	text-decoration: none;
  	
  	
@@ -44,19 +64,20 @@ h1{
  }
  #profile {
  	color: black;
-
-
-    font-family: 'Lobster', cursive;
+ 	 font-family: 'Lobster', cursive;
 
     font-family: 'Pacifico', cursive;
 
     font-family: 'Righteous', cursive;
+    text-decoration-line: underline;
 
 
 
  }
  span{
  	color: rgb(5,70,94);
+
+   
  }
 
  li{
@@ -101,6 +122,7 @@ h1{
  footer {
  	text-align: center;
  	padding: 20px;
+ 	font-weight: bold;
  }
  	
 
