--- a/About.css
+++ b/About.css
@@ -56,40 +56,32 @@ h1{
     font-family: 'Lobster', cursive;
     font-family: 'Pacifico', cursive;
     font-family: 'Righteous', cursive;
-
-
-
  }
  span{
  	color: rgb(5,70,94);
  }
 
  li{
- 	text-align: center;
- 	text-decoration: none;
- 	padding: 20px;
- 	padding-right: 20px;
- 	background: black;
-    border-bottom:  white 30px solid;
+    text-align: center;
+    text-decoration: none;
+    padding: 20px;
+    width: 300px;
+    margin: 10px;
+    margin-left: 400px;
+    padding-right: 10px;
+    background: black;
+    border-bottom:blue 2px solid;
     font-family: 'Pacifico', cursive;
     font-family: 'Righteous', cursive;
-    font-family: 'Lobster', cursive;
+    font-family: 'Lobster', cursive;    
+ }
 
 footer{
   	padding: 40px
   }
 
-
- 	
-
- }
  .description{
-    font-weight: normal;
- 	font-size: 14px;
- 	background:white;
- 	background-repeat: no-repeat;
- 	background-size: cover;
- 	background-attachment: fixed;
+    
  	color: black;
  	text-align: center;
  	width: 250;
@@ -117,7 +109,7 @@ footer{
  	font-size: 15px;
  	font-weight: bolder;
  }
- 
+
  footer {
     text-align: center;
     padding: 20px;
