--- a/Project.css
+++ b/Project.css
@@ -87,16 +87,19 @@ h1{
  }
 
  li{
- 	text-align: center;
- 	text-decoration: none;
- 	padding: 20px;
- 	padding-right: 20px;
- 	background: black;
-    border-bottom:  white 30px solid;
+    text-align: center;
+    text-decoration: none;
+    padding: 20px;
+    width: 300px;
+    margin: 10px;
+    margin-left: 400px;
+    padding-right: 10px;
+    background: black;
+    border-bottom:blue 2px solid;
     font-family: 'Pacifico', cursive;
     font-family: 'Righteous', cursive;
-    font-family: 'Lobster', cursive;
-
+    font-family: 'Lobster', cursive;    
+ }
   footer{
   	padding: 40px
   }
