--- a/index.css
+++ b/index.css
@@ -38,14 +38,14 @@ h1{
  	
  }
  nav a{
- 	text-decoration-style: underline;
+ 	
  	text-decoration: none;
  	color: white;
  	text-align: center;
  	font-size: 15px;
  	font-weight: normal;
  	display: inline;
- 	padding: 40px;
+ 	padding-right : 40px;
 
  }
  #profile {
@@ -59,13 +59,16 @@ h1{
  	color: rgb(5,70,94);  
  }
 
- li{
+li{
  	text-align: center;
  	text-decoration: none;
  	padding: 20px;
- 	padding-right: 20px;
+ 	width: 300px;
+ 	margin: 10px;
+ 	margin-left: 400px;
+ 	padding-right: 10px;
  	background: black;
-    border-bottom:  white 30px solid;
+    border-bottom:blue 2px solid;
     font-family: 'Pacifico', cursive;
     font-family: 'Righteous', cursive;
     font-family: 'Lobster', cursive; 	
