--- a/index.css
+++ b/index.css
@@ -62,38 +62,41 @@ h1{
 li{
  	text-align: center;
  	text-decoration: none;
- 	padding: 20px;
+ 	padding: 10px;
  	width: 300px;
  	margin: 10px;
  	margin-left: 400px;
- 	padding-right: 10px;
  	background: black;
     border-bottom:blue 2px solid;
     font-family: 'Pacifico', cursive;
     font-family: 'Righteous', cursive;
-    font-family: 'Lobster', cursive; 	
+    font-family: 'Lobster', cursive;
+   
  }
 
  .description{
     font-weight: bolder;
- 	font-size: 40px;
+ 	font-size: 30px;
  	background:url(comp.jpg);
  	background-repeat: no-repeat;
  	background-size: cover;
  	background-attachment: fixed;
- 	color: rgb(214,224,208);
+ 	color: white;
  	text-align: center;
  	width: 250;
  	height: 100;
  	padding: 120px;
-    font-family: 'Pacifico', cursive;
-    font-family: 'Righteous', cursive;
-    font-family: 'Lobster', cursive;
+    
+ }
+
+ .description p{
+ 	background: rgba(8,8,8,0.6);
+ 	font-family: 'Ibarra Real Nova', serif;	
  }
  footer {
  	text-align: center;
  	padding: 20px;
- 	font-weight: bold;
+
  }
  	
 
