Style border bottoms

--- a/Contact.css
+++ b/Contact.css
@@ -102,6 +102,7 @@ li{
     font-weight: bolder;
     color: white;
     background-color: black;
+     border-bottom:blue 2px solid;
     font-family: 'Satisfy', cursive;
     font-family: 'Kaushan Script', cursive;
     font-family: 'Pacifico', cursive;
